Portfolio Header fix / z-index of portfolio items

--- a/frontend/src/app/components/Header.scss
+++ b/frontend/src/app/components/Header.scss
@@ -7,8 +7,7 @@
     margin: 25px auto;
     width: 200px;
     cursor: pointer;
-    z-index: 6;
-
+    z-index: 999;
 }
 
 .ms-mega-menu {
@@ -16,7 +15,7 @@
     height: var(--header-height);
     top: calc(var(--header-height) * -1);
     animation-timing-function: ease-in-out;
-    z-index: 5;
+    z-index: 7;
     background-color: white;
     width: 100%;
     opacity: 0;
